2001-10-26 Joseph Wenninger <jowenn@kde.org>
  * The stacked highlighting shoul almost work now.
    Using old description files it will use quite a lot memory, but
    they should work.
    Problems:
        * It's leaking like a sieve on destruction, because the
	memarrays aren't deleted correctly yet (They need to be pointers and not
	references, otherwise there are out of memory errors in qgarray)
        * Highlighting isn't updated completely yet
	* I have to do some nasty workaround because the overloaded ==
	operator in QMemArray crashes, if one or both of the arrays has 
	a size of 0 (I think this is a bug in QT, but it could be that
	this is intended behaviour. Who knows ?)

2001-10-20 Christoph Cullmann <cullmann@kde.org>
  * new undo/redo stuff, should work now allready fine (mostly ;)

2001-10-14 Christoph Cullmann <cullmann@kde.org>
  * new interfaces
	* fixed some bugs (or better mistakes) in EditInterface
	* fix bugs and even more bugs

2001-10-14 Christoph Cullmann <cullmann@kde.org>
  * implementing and enhancing the new KTextEditor interfaces
  * rewrite the whole internal document/view stuff ;) (hope will be finished
    soon with that old crap !
  * reconstruction of whole katelibs + dirs

2001-10-06 Christoph Cullmann <cullmann@kde.org>
  * myself back again ;)
  * now kate is clean (only qt3), no backports ;)

2001-08-24  christian@kdevelop.org
  * reimplement the commenting of selections on some languages

2001-08-19  christian@kdevelop.org
  * added back Sather highlighting support
  * improved Eiffel language syntax highlighting support
  * added Eiffel language comment directive in eiffel.xml
  * added Ada language comment directive in ada.xml

2001-08-15  christian@kdevelop.org
  * committed Eiffel language syntax highlighting support

2001-08-08  rokrau@yahoo.com
  * committed changes to Kate's API necessary for integration of kate as
    a kpart into kdevelop

2001-05-13 Christoph Cullmann <cullmann@kde.org>