@@ -2,3 +2,9 @@ TODO:
  - Check docs for change on hd when focused, warning dialog: reload? yes/no[/view diff]
  - Find Text dialog needs ability to hit all documents.
  - Fix remaining bugs ;)
+ - exhaustive testing of the new highlighting structure
+ - porting all .xml files to the new scheme.
+		Small help:  A context of -1 returns to the next higher one (pop)
+			     A context of -2 stays in the current context (no more context="5" within context 5 (this 
+                             i ssupported, but should be avoided in new definitions, because you run into problems when using
+				-1 than. If a context >=0 is given as the argument a new entry is appended to the stack (push)
